2006-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_press): also pause/play with
	Space if the video widget has the focus

2006-04-24  Julien MOUTTE  <julien@moutte.net>

	Patch by: Jan Gerber <j@bootlab.org>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size):
	The aspect ratio setting defines the Image Aspect Ratio and
	not directly the Pixel Aspect Ratio. The PAR is then calculated
	from the IAR. (http://www.doom9.org/index.html?/capture/par.html)

2006-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_element_message):
	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_signal_idler):
	* src/backend/video-utils.c: (totem_resolve_relative_link):
	* src/backend/video-utils.h:
	* src/totem-mozilla-viewer.c: (on_got_redirect):
	* src/totem.c: (on_got_redirect):
	Make the GStreamer backends resolve relative redirects, as the
	xine-lib backend does (Closes: #339000)
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_write_m3u):
	Save the full path when we can't get a relative path when saving m3u
	playlists (Closes: #338974)

2006-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-scrsaver.c: (screensaver_inhibit_dbus),
	(screensaver_init_dbus): Patch from William Jon McCann <mccann@jhu.edu>
	to update the screensaver code to the new API in HEAD, and remove
	compatibility code for pre-2.14 gnome-screensaver code (Closes: #339208)

2006-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: Patch from Gary Coady
	<gary@lyranthe.org> to allow direct playback of stream from protocol
	schemes not supported by Mozilla (Closes: #339142)

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_realize), (bacon_video_widget_new),
	(bacon_video_widget_set_audio_out_type):
	Set the audio output type when creating the widget, set the current