@@ -1,3 +1,8 @@
+2006-04-24  Julien MOUTTE  <julien@moutte.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size):
+	Apply updated patch from #339408. closing bug.
+
 2006-04-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c: (totem_action_handle_key_press): also pause/play with
